--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,7 +48,4 @@ jobs:
         version: 'snapshot'
 
     - name: Run tests
-      run: |
-        eask package
-        eask install
-        eask compile
+      run: make ci
